tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause1.ts (1 errors) ====
    class C extends {
                    ~
!!! error TS1003: Identifier expected.
    }